# bwcheck

./: .editorconfig  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  ReadMe.md
.github/workflows/: ccpp.yml  main.yml
bwchecker/: CMakeLists.txt  bwutils.hpp  config.h  config.hpp  main.cpp  tcp_client.cpp  tcp_server.cpp  udp_client.cpp  udp_server.cpp
